New LuaTeX v0.87 primitives
These are the ones listed in the release notes: \(h|t|v)pack are
not currently in the manual! There are also other new primitives
listed by

    \directlua{print(tex.extraprimitives())}

but as they are not docmented and we are told

> there are some experimental new primitives but these will be
> described when they are stable (currently being tested)

I've missed those out. Even then, some of the additions here may
yet be reversed later!

--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -803,10 +803,13 @@
   \__kernel_primitive:NN \expanded                    \luatex_expanded:D
   \__kernel_primitive:NN \fontid                      \luatex_fontid:D
   \__kernel_primitive:NN \formatname                  \luatex_formatname:D
+  \__kernel_primitive:NN \hjcode                      \luatex_hjcode:D
+  \__kernel_primitive:NN \hpack                       \luatex_hpack:D
   \__kernel_primitive:NN \hyphenationmin              \luatex_hypenationmin:D
   \__kernel_primitive:NN \gleaders                    \luatex_gleaders:D
   \__kernel_primitive:NN \initcatcodetable            \luatex_initcatcodetable:D
   \__kernel_primitive:NN \latelua                     \luatex_latelua:D
+  \__kernel_primitive:NN \letcharcode                 \luatex_letcharcode:D
   \__kernel_primitive:NN \luaescapestring             \luatex_luaescapestring:D
   \__kernel_primitive:NN \luafunction                 \luatex_luafunction:D
   \__kernel_primitive:NN \luastartup                  \luatex_luastartup:D
@@ -822,6 +825,7 @@
   \__kernel_primitive:NN \nohrule                     \luatex_nohrule:D
   \__kernel_primitive:NN \nokerns                     \luatex_nokerns:D
   \__kernel_primitive:NN \noligs                      \luatex_noligs:D
+  \__kernel_primitive:NN \nospace                     \luatex_nospace:D
   \__kernel_primitive:NN \novrule                     \luatex_novrule:D
   \__kernel_primitive:NN \outputbox                   \luatex_outputbox:D
   \__kernel_primitive:NN \pageleftoffset              \luatex_pageleftoffset:D
@@ -840,6 +844,8 @@
   \__kernel_primitive:NN \suppresslongerror           \luatex_suppresslongerror:D
   \__kernel_primitive:NN \suppressmathparerror        \luatex_suppressmathparerror:D
   \__kernel_primitive:NN \suppressoutererror          \luatex_suppressoutererror:D
+  \__kernel_primitive:NN \tpack                       \luatex_tpack:D
+  \__kernel_primitive:NN \vpack                       \luatex_vpack:D
 %    \end{macrocode}
 % Slightly more awkward are the directional primitives in \LuaTeX{}. These
 % come from Omega/Aleph, but we do not support those engines and
