Defensive space (see #295)

--- a/l3kernel/l3bootstrap.dtx
+++ b/l3kernel/l3bootstrap.dtx
@@ -362,7 +362,7 @@
     \newcatcodetable\ucharcat@table
     \directlua{
       l3kernel = l3kernel or { }
-      local charcat_table = \number\ucharcat@table
+      local charcat_table = \number\ucharcat@table\space
       l3kernel.charcat_table = charcat_table
     }%
 %</package>
