--- a/l3kernel/l3bootstrap.dtx
+++ b/l3kernel/l3bootstrap.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3bootstrap.dtx Copyright (C) 2011-2015 The LaTeX3 project
+%% File: l3bootstrap.dtx Copyright (C) 2011-2016 The LaTeX3 project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -76,7 +76,7 @@
             \endgroup
             \def\ExplFileDate{0000/00/00}%
             \def\ExplFileDescription{#2}%
-            \def\ExplFileName{[unknown name]}%
+            \def\ExplFileName{[unknown]}%
             \def\ExplFileExtension{[unknown extension]}%
             \def\ExplFileVersion{-1}%
           }%
