Protect against non-UTF-8 input (closes #296)

--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -1614,7 +1614,7 @@
         \@@_parse_auxi:w #1#2 \q_stop
       \else:
         \if_int_compare:w \__str_if_eq_x:nn
-          {#2} { ~Conditional~Mappings~ } = \c_zero
+          { \exp_not:n {#2} } { ~Conditional~Mappings~ } = \c_zero
           \cs_set_protected:Npn \@@_parse:w ##1 \q_stop { }
         \fi:
       \fi:
