--- a/l3experimental/xgalley/l3galley.dtx
+++ b/l3experimental/xgalley/l3galley.dtx
@@ -1,7 +1,7 @@
 % \iffalse
 %
 %% File: l3galley.dtx Copyright (C) 1999-2001, 2004-2009 Frank Mittelbach
-%%                              (C) 2010-2015 The LaTeX3 Project
+%%                              (C) 2010-2016 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -2555,6 +2555,13 @@
 \cs_set_eq:cN { @ @ par } \galley_par:
 %    \end{macrocode}
 % \end{macro}
+%
+% \begin{macro}{\addvspace}
+%   The mechanism here is entirely different, but at least this works!
+%    \begin{macrocode}
+\cs_set_nopar:Npn \addvspace { \galley_vspace_set_single:n }
+%    \end{macrocode}
+%\end{macro}
 %
 % \begin{macro}{\@afterheading}
 %   Set some flags and hope for the best!
