Also cover \addpenalty

--- a/l3experimental/xgalley/l3galley.dtx
+++ b/l3experimental/xgalley/l3galley.dtx
@@ -2556,10 +2556,11 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\addvspace}
+% \begin{macro}{\addpenalty, \addvspace}
 %   The mechanism here is entirely different, but at least this works!
 %    \begin{macrocode}
-\cs_set_nopar:Npn \addvspace { \galley_vspace_set_single:n }
+\cs_set_nopar:Npn \addpenalty { \galley_penalty_set_single:n }
+\cs_set_nopar:Npn \addvspace  { \galley_vspace_set_single:n }
 %    \end{macrocode}
 %\end{macro}
 %
