Remove incorrect docs

--- a/l3experimental/xgalley/l3galley.dtx
+++ b/l3experimental/xgalley/l3galley.dtx
@@ -240,8 +240,7 @@
 %   \end{syntax}
 %   Sets the \meta{space} to be inserted between the current and next
 %   paragraph on a one-off basis. This function is intended for user-level
-%   adjustments to design, and otherwise is analogous to
-%   \cs{galley_set_vspace:n}.
+%   adjustments to design.
 % \end{function}
 %
 % \subsection{Paragraph shape}
