--- a/l3experimental/l3sort/l3sort.dtx
+++ b/l3experimental/l3sort/l3sort.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File l3sort.dtx (C) Copyright 2012,2014,2015 The LaTeX3 Project
+%% File l3sort.dtx (C) Copyright 2012,2014-2016 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
