--- a/l3experimental/l3str/l3flag.dtx
+++ b/l3experimental/l3str/l3flag.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3flag.dtx Copyright (C) 2011-2012,2014,2015 The LaTeX3 Project
+%% File: l3flag.dtx Copyright (C) 2011-2012,2014-2016 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
