--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -860,7 +860,7 @@
 %   giving an \meta{integer denotation}.
 % \end{function}
 %
-% \begin{function}[EXP, added = 2014-06-30, updated = 2016-01-08]^^A
+% \begin{function}[EXP, added = 2014-06-30, updated = 2016-01-12]^^A
 %   {
 %     \tl_lower_case:n,  \tl_upper_case:n,  \tl_mixed_case:n,
 %     \tl_lower_case:nn, \tl_upper_case:nn, \tl_mixed_case:nn
@@ -958,6 +958,22 @@
 %   case changing.
 % \end{variable}
 %
+% \begin{variable}{\l_tl_case_change_accents_tl}
+%   This list specifies accent commands which should be left unexpanded
+%   in the output. This allows for example
+%   \begin{verbatim}
+%     \tl_upper_case:n { \" { a } }
+%   \end{verbatim}
+%   to yield
+%   \begin{verbatim}
+%     \" { A }
+%   \end{verbatim}
+%   irrespective of the expandability of |\"|.
+%
+%   The standard contents of this variable is |\"|, |\^|, |\'|,
+%   |\`|,  |\.|,  |\c|, |\u|, |\~|, |\H| and  |\v|
+% \end{variable}
+%
 % \enquote{Mixed} case conversion may be regarded informally as converting the
 % first character of the \meta{tokens} to upper case and the rest to lower
 % case. However, the process is more complex than this as there are some
@@ -991,16 +1007,15 @@
 % \end{variable}
 %
 %   As is generally true for \pkg{expl3}, these functions are designed to
-%   work with Unicode input only. As such, when used with \pdfTeX{}
-%   \emph{only} the characters \texttt{a}--\texttt{zA}--\texttt{Z} are
-%   modified. When used with \XeTeX{} or \LuaTeX{} a full range of Unicode
-%   transformations are enabled. Specifically, the standard mappings here
-%   follow those defined by the \href{http://www.unicode.org}^^A
+%   work with Unicode input only. As such, UTF-8 input is assumed for
+%   \emph{all} engines. When used with \XeTeX{} or \LuaTeX{} a full range of
+%   Unicode transformations are enabled. Specifically, the standard mappings
+%   here follow those defined by the \href{http://www.unicode.org}^^A
 %   {Unicode Consortium} in \texttt{UnicodeData.txt} and
-%   \texttt{SpecialCasing.txt}. Note that in some cases, \pdfTeX{} can
-%   interpret the input to a case change but not generate the correct output
-%   (for example in the mapping i to I-dot in Turkish): in these cases the
-%   input is left unchanged.
+%   \texttt{SpecialCasing.txt}. In the case of $8$-bit engines, mappings
+%   are provided for characters which can be represented in output typeset
+%   using the |T1| font encoding. Thus for example |ä| can be case-changed
+%   using \pdfTeX{}.
 %
 % Context-sensitive mappings are enabled: language-dependent cases are
 % discussed below. Context detection will expand input but treats any
@@ -3058,6 +3073,7 @@
 %     \@@_change_case_output:nwn ,
 %     \@@_change_case_output:Vwn ,
 %     \@@_change_case_output:own ,
+%     \@@_change_case_output:Vwn ,
 %     \@@_change_case_output:fwn ,
 %   }
 % \begin{macro}[aux, EXP]{\@@_change_case_end:wn}
@@ -3073,9 +3089,16 @@
 % \begin{macro}[aux, EXP]{\@@_change_case_N_type:Nnnn}
 % \begin{macro}[aux, EXP]{\@@_change_case_char:Nnn}
 % \begin{macro}[aux, EXP]{\@@_change_case_char:nN}
-% \begin{macro}[aux, EXP]{\@@_change_case_char_aux:nN}
+% \begin{macro}[aux, EXP]
+%   {\@@_change_case_char_auxi:nN, \@@_change_case_char_auxii:nN}
 % \begin{macro}[aux]
 %   {\@@_lookup_lower:N, \@@_lookup_upper:N, \@@_lookup_title:N}
+% \begin{macro}[aux, EXP]{\@@_change_case_char_UTFiix:nNN}
+% \begin{macro}[aux, EXP]{\@@_change_case_char_UTFiix:nNNN}
+% \begin{macro}[aux, EXP]{\@@_change_case_char_UTFiix:nNNNN}
+% \begin{macro}[aux, EXP]{\@@_change_case_char_UTFiix:nn}
+% \begin{macro}[aux, EXP]{\@@_change_case_cs_letterlike:Nn}
+% \begin{macro}[aux, EXP]{\@@_change_case_cs_accents:NN}
 % \begin{macro}[aux, EXP]{\@@_change_case_cs:N}
 % \begin{macro}[aux, EXP]{\@@_change_case_cs:NN}
 % \begin{macro}[aux, EXP]{\@@_change_case_cs:NNn}
@@ -3127,7 +3150,7 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_change_case_output:nwn #1#2 \@@_change_case_result:n #3
   { #2 \@@_change_case_result:n { #3 #1 } }
-\cs_generate_variant:Nn \@@_change_case_output:nwn { V , o , f }
+\cs_generate_variant:Nn \@@_change_case_output:nwn { V , o , v , f }
 \cs_new:Npn \@@_change_case_end:wn #1 \@@_change_case_result:n #2
   {
     \group_align_safe_end:
@@ -3253,19 +3276,19 @@
 \cs_new:Npn \@@_change_case_N_type:Nnnn #1#2#3#4
   {
     \token_if_cs:NTF #1
-      { \@@_change_case_cs:N #1 }
+      { \@@_change_case_cs_letterlike:Nn #1 {#3} }
       { \@@_change_case_char:Nnn #1 {#3} {#4} }
     \@@_change_case_loop:wnn #2 \q_recursion_stop {#3} {#4}
   }
 %    \end{macrocode}
-%   For character tokens there are a couple of potential special cases to
-%   handle then the core idea of the loop: a lookup table. The latter uses
-%   the character code to spilt what would otherwise be a very long list into
-%   $100$ manageable blocks (this is a balance between hash table usage and
-%   performance). Notice that the special case code may do a look-ahead so
-%   requires a final \texttt{w}-type argument whereas the core lookup table
-%   does not and also guarantees an output so \texttt{f}-type expansion may
-%   be used to obtain the case-changed result.
+%   For character tokens there are some special cases to deal with then
+%   the majority of changes are covered by using the \TeX{} data as a lookup
+%   along with expandable character generation. This avoids needing a very
+%   large number of macros or (as seen in earlier versions) a somewhat tricky
+%   split of the characters into various blocks. Notice that the special case
+%   code may do a look-ahead so requires a final \texttt{w}-type argument
+%   whereas the core lookup table does not and also guarantees an output so
+%   \texttt{f}-type expansion may be used to obtain the case-changed result.
 %    \begin{macrocode}
 \cs_new:Npn \@@_change_case_char:Nnn #1#2#3
   {
@@ -3277,18 +3300,47 @@
             { \@@_change_case_char:nN {#2} #1 }
         }
   }
-\cs_new:Npn \@@_change_case_char:nN #1#2
+%    \end{macrocode}
+%   For Unicode engines we can handle all characters directly. However, for
+%   the $8$-bit engines the aim is to deal with (a subset of) Unicode (UTF-8)
+%   input. They deal with that by making the upper half of the range active,
+%   so we look for that and if found work out how many UTF-8 octets there
+%   are to deal with. Those can then be grabbed to reconstruct the full
+%   Unicode character, which is then used in a lookup. (As will become
+%   obvious below, there is no intention here of covering all of Unicode.)
+%    \begin{macrocode}
+\cs_if_exist:NTF \utex_char:D
+  {
+    \cs_new:Npn \@@_change_case_char:nN #1#2
+      { \@@_change_case_char_auxi:nN {#1} #2 }
+  }
+  {
+    \cs_new:Npn \@@_change_case_char:nN #1#2
+      {
+        \int_compare:nNnTF { `#2 } > { "80 }
+          {
+            \int_compare:nNnTF { `#2 } < { "E0 }
+              { \@@_change_case_char_UTFiix:nNNN {#1} #2 }
+              {
+                \int_compare:nNnTF { `#2 } < { "F0 }
+                  { \@@_change_case_char_UTFiix:nNNNN {#1} #2 }
+                  { \@@_change_case_char_UTFiix:nNNNNN {#1} #2 }
+              }
+          }
+          { \@@_change_case_char_auxi:nN {#1} #2 }
+       }
+  }
+\cs_new:Npn \@@_change_case_char_auxi:nN #1#2
   {
     \@@_change_case_output:fwn
       {
-        \cs_if_exist:cTF { c__unicode_ #1 _ #2 _tl }
-          { \tl_use:c { c__unicode_ #1 _ #2 _tl } }
-          { \@@_change_case_char_aux:nN {#1} #2 }
+        \cs_if_exist_use:cF { c__unicode_ #1 _ \token_to_str:N #2 _tl }
+          { \@@_change_case_char_auxii:nN {#1} #2 }
       }
   }
 \cs_if_exist:NTF \utex_char:D
   {
-    \cs_new:Npn \@@_change_case_char_aux:nN #1#2
+    \cs_new:Npn \@@_change_case_char_auxii:nN #1#2
       {
         \int_compare:nNnTF { \use:c { @@_lookup_ #1 :N } #2 } = { 0 }
           { \exp_stop_f: #2 }
@@ -3301,9 +3353,63 @@
     \cs_new_eq:NN \@@_lookup_title:N \@@_lookup_upper:N
   }
   {
-    \cs_new:Npn \@@_change_case_char_aux:nN #1#2 { \exp_stop_f: #2 }
+    \cs_new:Npn \@@_change_case_char_auxii:nN #1#2 { \exp_stop_f: #2 }
+    \cs_new:Npn \@@_change_case_char_UTFiix:nNNN #1#2#3#4
+      { \@@_change_case_char_UTFiix:nnN {#1} {#2#4} #3 }
+    \cs_new:Npn \@@_change_case_char_UTFiix:nNNNN #1#2#3#4#5
+      { \@@_change_case_char_UTFiix:nnN {#1} {#2#4#5} #3 }
+    \cs_new:Npn \@@_change_case_char_UTFiix:nNNNNN #1#2#3#4#5#6
+      { \@@_change_case_char_UTFiix:nnN {#1} {#2#4#5#6} #3 }
+    \cs_new:Npn \@@_change_case_char_UTFiix:nnN #1#2#3
+      {
+        \@@_change_case_output:fwn
+          {
+            \cs_if_exist_use:cF { c__unicode_ #1 _ \tl_to_str:n {#2} _tl }
+              { \exp_stop_f: #2 }
+          }
+        #3
+      }
   }
 %    \end{macrocode}
+%   Before dealing with general control sequences there are the special
+%   ones to deal with. Letter-like control sequences are a simple look-up,
+%   while for accents the loop is much as done elsewhere. Notice that
+%   we have a no-op test to make sure there is no unexpected expansion of
+%   letter-like input.
+%    \begin{macrocode}
+\cs_new:Npn \@@_change_case_cs_letterlike:Nn #1#2
+  {
+    \cs_if_exist:cTF { c_@@_change_case_ #2 _ \token_to_str:N #1 _tl }
+      {
+        \@@_change_case_output:vwn
+          { c_@@_change_case_ #2 _ \token_to_str:N #1 _tl } 
+      }
+      {
+        \cs_if_exist:cTF
+          {
+            c_@@_change_case_
+            \str_if_eq:nnTF {#2} { lower } { upper } { lower }
+            _ \token_to_str:N #1 _tl 
+          }
+          { \@@_change_case_output:nwn {#1} }
+          {
+            \exp_after:wN \@@_change_case_cs_accents:NN
+              \exp_after:wN #1 \l_tl_case_change_accents_tl
+              \q_recursion_tail \q_recursion_stop
+          }
+      }
+  }
+\cs_new:Npn \@@_change_case_cs_accents:NN #1#2
+  {
+    \quark_if_recursion_tail_stop_do:Nn #2
+      { \@@_change_case_cs:N #1 }
+    \str_if_eq:nnTF {#1} {#2}
+      {
+        \use_i_delimit_by_q_recursion_stop:nw
+          { \@@_change_case_output:nwn {#1} }
+      }
+      { \@@_change_case_cs_accents:NN #1 }
+  }
 %    \end{macrocode}
 %   To deal with a control sequence there is first a need to test if it is
 %   on the list which indicate that case changing should be skipped. That's
@@ -3394,6 +3500,12 @@
 % \end{macro}
 % \end{macro}
 % \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
 %
 % \begin{macro}[aux, EXP]{\@@_change_case_lower_sigma:Nnw}
 % \begin{macro}[aux, EXP]{\@@_change_case_lower_sigma:w}
@@ -3453,16 +3565,18 @@
 %   either a dotless-I or a dotted-I. In the latter case the mapping is
 %   easy, but in the former there is a second stage search.
 %    \begin{macrocode}
-\cs_new:Npn \@@_change_case_lower_tr:Nnw #1#2
+\cs_if_exist:NTF \utex_char:D
   {
-    \int_compare:nNnTF { `#1 } = { "0049 }
-      { \@@_change_case_lower_tr_auxi:Nw }
+    \cs_new:Npn \@@_change_case_lower_tr:Nnw #1#2
       {
-        \int_compare:nNnTF { `#1 } = { "0130 }
-          { \@@_change_case_output:nwn { i } }
-          {#2}
+        \int_compare:nNnTF { `#1 } = { "0049 }
+          { \@@_change_case_lower_tr_auxi:Nw }
+          {
+            \int_compare:nNnTF { `#1 } = { "0130 }
+              { \@@_change_case_output:nwn { i } }
+              {#2}
+          }
       }
-  }
 %    \end{macrocode}
 %   After a dotless-I there may be a dot-above character. If there is then
 %   a dotted-i should be produced, otherwise output a dotless-i. When the
@@ -3471,30 +3585,61 @@
 %   (it grabs \cs{@@_change_case_loop:wn} and the dot-above char and
 %   discards the latter).
 %    \begin{macrocode}
-\cs_new:Npn \@@_change_case_lower_tr_auxi:Nw #1#2 \q_recursion_stop
-  {
-    \tl_if_head_is_N_type:nTF {#2}
-      { \@@_change_case_lower_tr_auxii:Nw #2 \q_recursion_stop }
-      { \@@_change_case_output:Vwn \c__unicode_dotless_i_tl }
-    #1 #2 \q_recursion_stop
-  }
-\cs_new:Npn \@@_change_case_lower_tr_auxii:Nw #1#2 \q_recursion_stop
-  {
-    \@@_change_case_if_expandable:NTF #1
+    \cs_new:Npn \@@_change_case_lower_tr_auxi:Nw #1#2 \q_recursion_stop
       {
-        \exp_after:wN \@@_change_case_lower_tr_auxi:Nw #1
-          #2 \q_recursion_stop
+        \tl_if_head_is_N_type:nTF {#2}
+          { \@@_change_case_lower_tr_auxii:Nw #2 \q_recursion_stop }
+          { \@@_change_case_output:Vwn \c__unicode_dotless_i_tl }
+        #1 #2 \q_recursion_stop
       }
+    \cs_new:Npn \@@_change_case_lower_tr_auxii:Nw #1#2 \q_recursion_stop
       {
-        \bool_if:nTF
+        \@@_change_case_if_expandable:NTF #1
           {
-               \token_if_cs_p:N #1
-            || ! ( \int_compare_p:nNn { `#1 } = { "0307 } )
+            \exp_after:wN \@@_change_case_lower_tr_auxi:Nw #1
+              #2 \q_recursion_stop
           }
+          {
+            \bool_if:nTF
+              {
+                   \token_if_cs_p:N #1
+                || ! ( \int_compare_p:nNn { `#1 } = { "0307 } )
+              }
+              { \@@_change_case_output:Vwn \c__unicode_dotless_i_tl }
+              {
+                \@@_change_case_output:nwn { i }
+                \use_i:nn
+              }
+          }
+      }
+  }
+%    \end{macrocode}
+%   For $8$-bit engines, dot-above is not available so there is a simple
+%   test for an upper-case I. Then we can look for the UTF-8 representation of
+%   an upper case dotted-I without the combining char. If it's not there,
+%   preserve the UTF-8 sequence as-is.
+%    \begin{macrocode}
+  {
+    \cs_new:Npn \@@_change_case_lower_tr:Nnw #1#2
+      {
+        \int_compare:nNnTF { `#1 } = { "0049 }
           { \@@_change_case_output:Vwn \c__unicode_dotless_i_tl }
           {
+            \int_compare:nNnTF { `#1 } = { 196 }
+              { \@@_change_case_lower_tr_auxi:Nw #1 {#2} }
+              {#2}
+          }
+      }
+    \cs_new:Npn \@@_change_case_lower_tr_auxi:Nw #1#2#3#4
+      {
+        \int_compare:nNnTF { `#4 } = { 176 }
+          {
             \@@_change_case_output:nwn { i }
-            \use_i:nn
+            #3
+          }
+          {
+            #2
+            #3 #4
           }
       }
   }
@@ -3668,16 +3813,74 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\__tl_change_case_upper_de-alt:Nnw}
+% \begin{macro}{\@@_change_case_upper_de-alt:Nnw}
 %   A simple alternative version for German.
 %    \begin{macrocode}
 \cs_new:cpn { @@_change_case_upper_de-alt:Nnw } #1#2
   {
     \int_compare:nNnTF { `#1 } = { 223 }
-      { \__tl_change_case_output:Vwn \c__unicode_upper_Eszett_tl }
+      { \@@_change_case_output:Vwn \c__unicode_upper_Eszett_tl }
       {#2}
   }
 %    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[EXP, int]{\__unicode_codepoint_to_UTFiix:n}
+% \begin{macro}[EXP, aux]{\__unicode_codepoint_to_UTFiix_auxi:n}
+% \begin{macro}[EXP, aux]{\__unicode_codepoint_to_UTFiix_auxii:Nnn}
+% \begin{macro}[EXP, aux]{\__unicode_codepoint_to_UTFiix_auxiii:n}
+%   This code will convert a codepoint into the correct UTF-8 represenation.
+%   As there are a variable number of octets, the result starts with the
+%   numeral |1|--|4| to indicate the nature of the returned value. Note that
+%   this code will cover the full range even though at this stage it is not
+%   required here. Also note that longer-term this is likely to need a public
+%   interface and/or moving to \pkg{l3str} (see experimental string
+%   conversions). In terms of the algoritm itself, see
+%   \url{https://en.wikipedia.org/wiki/UTF-8} for the octet pattern.
+%    \begin{macrocode}
+\cs_new:Npn \__unicode_codepoint_to_UTFiix:n #1
+  {
+    \exp_args:Nf \__unicode_codepoint_to_UTFiix_auxi:n
+      { \int_eval:n {#1} }
+  }
+\cs_new:Npn \__unicode_codepoint_to_UTFiix_auxi:n #1
+  {
+    \if_int_compare:w #1 > "80 ~
+      \if_int_compare:w #1 < "800 ~
+        2
+        \__unicode_codepoint_to_UTFiix_auxii:Nnn C {#1} { 64 }
+        \__unicode_codepoint_to_UTFiix_auxiii:n {#1}
+      \else:
+        \if_int_compare:w #1 < "10000 ~
+          3
+          \__unicode_codepoint_to_UTFiix_auxii:Nnn E {#1} { 64 * 64 }
+          \__unicode_codepoint_to_UTFiix_auxiii:n {#1}
+          \__unicode_codepoint_to_UTFiix_auxiii:n
+            { \int_div_truncate:nn {#1} { 64 } }
+        \else:
+          4
+          \__unicode_codepoint_to_UTFiix_auxii:Nnn F
+            {#1} { 64 * 64 * 64 }
+          \__unicode_codepoint_to_UTFiix_auxiii:n
+            { \int_div_truncate:nn {#1} { 64 * 64 } }
+          \__unicode_codepoint_to_UTFiix_auxiii:n
+            { \int_div_truncate:nn {#1} { 64 } }
+          \__unicode_codepoint_to_UTFiix_auxiii:n {#1}
+
+        \fi:
+      \fi:
+    \else:
+      1 {#1}
+    \fi:
+  }
+\cs_new:Npn \__unicode_codepoint_to_UTFiix_auxii:Nnn #1#2#3
+  { { \int_eval:n { "#10 + \int_div_truncate:nn {#2} {#3} } } }
+\cs_new:Npn \__unicode_codepoint_to_UTFiix_auxiii:n #1
+  { { \int_eval:n { \int_mod:nn {#1} { 64 } + 128 } } }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
 % \end{macro}
 %
 % \begin{variable}
@@ -3686,12 +3889,11 @@
 %     \c__unicode_final_sigma_tl  ,
 %     \c__unicode_accents_lt_tl   ,
 %     \c__unicode_dot_above_tl    ,
-%     \c__unicode_dotless_i_tl    ,
-%     \c__unicode_dotted_I_tl     ,
-%     \c__unicode_i_ogonek_tl     ,
-%     \c__unicode_I_ogonek_tl     ,
 %     \c__unicode_upper_Eszett_tl
 %   }
+%   The above needs various special token lists containg pre-formed characters.
+%   This set are only available in Unicode engines, with no-op definitions
+%   for $8$-bit use.
 %    \begin{macrocode}
 \cs_if_exist:NTF \utex_char:D
   {
@@ -3707,23 +3909,259 @@
           { \utex_char:D "0069 ~ \utex_char:D "0307 ~ \utex_char:D "0303 ~ }
       }
     \tl_const:Nx \c__unicode_dot_above_tl    { \utex_char:D "0307 ~ }
-    \tl_const:Nx \c__unicode_dotless_i_tl    { \utex_char:D "0131 ~ }
-    \tl_const:Nx \c__unicode_dotted_I_tl     { \utex_char:D "0130 ~ }
-    \tl_const:Nx \c__unicode_i_ogonek_tl     { \utex_char:D "012F ~ }
-    \tl_const:Nx \c__unicode_I_ogonek_tl     { \utex_char:D "012E ~ }
     \tl_const:Nx \c__unicode_upper_Eszett_tl { \utex_char:D "1E9E ~}
   }
   {
-    \tl_const:Nn \c__unicode_std_sigma_tl    { }
-    \tl_const:Nn \c__unicode_final_sigma_tl  { }
-    \tl_const:Nn \c__unicode_accents_lt_tl   { }
-    \tl_const:Nn \c__unicode_dot_above_tl    { }
-    \tl_const:Nn \c__unicode_dotless_i_tl    { I }
-    \tl_const:Nn \c__unicode_dotted_I_tl     { i }
-    \tl_const:Nn \c__unicode_i_ogonek_tl     { }
-    \tl_const:Nn \c__unicode_I_ogonek_tl     { }
-    \tl_const:Nn \c__unicode_upper_Eszett_tl { }
+      \tl_const:Nn \c__unicode_std_sigma_tl    { }
+      \tl_const:Nn \c__unicode_final_sigma_tl  { }
+      \tl_const:Nn \c__unicode_accents_lt_tl   { }
+      \tl_const:Nn \c__unicode_dot_above_tl    { }
+      \tl_const:Nn \c__unicode_upper_Eszett_tl { }
   }
+%    \end{macrocode}
+% \end{variable}
+% \begin{variable}
+%   {
+%     \c__unicode_dotless_i_tl    ,
+%     \c__unicode_dotted_I_tl     ,
+%     \c__unicode_i_ogonek_tl     ,
+%     \c__unicode_I_ogonek_tl     ,
+%   }
+%  For cases where there is an $8$-bit option in the |T1| font set up,
+%  a variant is provided in both cases.
+%    \begin{macrocode}
+\group_begin:
+  \cs_if_exist:NTF \utex_char:D
+    {
+      \cs_set_protected:Npn \@@_tmp:w #1#2
+        { \tl_const:Nx #1 { \utex_char:D "#2 ~ } }
+    }
+    {
+      \char_set_catcode_active:N .
+      \char_set_catcode_active:N !
+      \cs_set_protected:Npn \@@_tmp:w #1#2
+        {
+          \group_begin:
+            \cs_set_protected:Npn \@@_tmp:w ##1##2##3
+              {
+                \char_set_lccode:nn { `\. } {##2}
+                \char_set_lccode:nn { `\! } {##3}
+                \tex_lowercase:D
+                  { \tl_const:Nn #1 { . ! } }
+              }
+            \tl_set:Nx \l_@@_internal_a_tl
+              { \__unicode_codepoint_to_UTFiix:n {"#2} }
+            \exp_after:wN \@@_tmp:w \l_@@_internal_a_tl
+          \group_end:
+        }
+    }
+  \@@_tmp:w \c__unicode_dotless_i_tl { 0131 }
+  \@@_tmp:w \c__unicode_dotted_I_tl  { 0130 }
+  \@@_tmp:w \c__unicode_i_ogonek_tl  { 012F }
+  \@@_tmp:w \c__unicode_I_ogonek_tl  { 012E }  
+\group_end:
+%    \end{macrocode}
+% \end{variable}
+%
+% For $8$-bit engines we now need to define the case-change data for
+% the multi-octet mappings. These need a list of what code points are
+% doable in |T1| so the list is hard coded (there's no saving in loading
+% the mappings dynamically). All of the straight-forward ones have two
+% octets, so that is taken as read.
+%    \begin{macrocode}
+\cs_if_exist:NF \utex_char:D
+  {
+    \group_begin:
+      \char_set_catcode_active:N .
+      \char_set_catcode_active:N !
+      \char_set_catcode_active:N ;
+      \char_set_catcode_active:N ,
+      \cs_set_protected:Npn \@@_loop:nn #1#2
+        {
+          \quark_if_recursion_tail_stop:n {#1}
+          \tl_set:Nx \l_@@_internal_a_tl
+            {
+              \__unicode_codepoint_to_UTFiix:n {"#1}
+              \__unicode_codepoint_to_UTFiix:n {"#2}
+            }
+          \exp_after:wN \@@_tmp:w \l_@@_internal_a_tl
+          \@@_loop:nn
+        }
+      \cs_set_protected:Npn \@@_tmp:w #1#2#3#4#5#6
+        {
+          \char_set_lccode:nn { `\. } {#2}
+          \char_set_lccode:nn { `\! } {#3}
+          \char_set_lccode:nn { `\; } {#5}
+          \char_set_lccode:nn { `\, } {#6}
+          \tex_lowercase:D
+            {
+              \tl_const:cn { c__unicode_lower_ \tl_to_str:n { . ! } _tl }
+                { ; , }
+              \tl_const:cn { c__unicode_upper_ \tl_to_str:n { ; , } _tl }
+                { . ! }
+            }
+        }
+      \@@_loop:nn
+        { 00C0 } { 00E0 }
+        { 00C2 } { 00E2 }
+        { 00C3 } { 00E3 }
+        { 00C4 } { 00E4 }
+        { 00C5 } { 00E5 }
+        { 00C6 } { 00E6 }
+        { 00C7 } { 00E7 }
+        { 00C8 } { 00E8 }
+        { 00C9 } { 00E9 }
+        { 00CA } { 00EA }
+        { 00CB } { 00EB }
+        { 00CC } { 00EC }
+        { 00CD } { 00ED }
+        { 00CE } { 00EE }
+        { 00CF } { 00EF }
+        { 00D0 } { 00F0 }
+        { 00D1 } { 00F1 }
+        { 00D2 } { 00F2 }
+        { 00D3 } { 00F3 }
+        { 00D4 } { 00F4 }
+        { 00D5 } { 00F5 }
+        { 00D6 } { 00F6 }
+        { 00D8 } { 00F8 }
+        { 00D9 } { 00F9 }
+        { 00DA } { 00FA }
+        { 00DB } { 00FB }
+        { 00DC } { 00FC }
+        { 00DD } { 00FD }
+        { 00DE } { 00FE }
+        { 0100 } { 0101 }
+        { 0102 } { 0103 }
+        { 0104 } { 0105 }
+        { 0106 } { 0107 }
+        { 0108 } { 0109 }
+        { 010A } { 010B }
+        { 010C } { 010D }
+        { 010E } { 010F }
+        { 0110 } { 0111 }
+        { 0112 } { 0113 }
+        { 0114 } { 0115 }
+        { 0116 } { 0117 }
+        { 0118 } { 0119 }
+        { 011A } { 011B }
+        { 011C } { 011D }
+        { 011E } { 011F }
+        { 0120 } { 0121 }
+        { 0122 } { 0123 }
+        { 0124 } { 0125 }
+        { 0128 } { 0129 }
+        { 012A } { 012B }
+        { 012C } { 012D }
+        { 012E } { 012F }
+        { 0132 } { 0133 }
+        { 0134 } { 0135 }
+        { 0136 } { 0137 }
+        { 0139 } { 013A }
+        { 013B } { 013C }
+        { 013E } { 013F }
+        { 0141 } { 0142 }
+        { 0143 } { 0144 }
+        { 0145 } { 0146 }
+        { 0147 } { 0148 }
+        { 014A } { 014B }
+        { 014C } { 014D }
+        { 014E } { 014F }
+        { 0150 } { 0151 }
+        { 0152 } { 0153 }
+        { 0154 } { 0155 }
+        { 0156 } { 0157 }
+        { 0158 } { 0159 }
+        { 015A } { 015B }
+        { 015C } { 015D }
+        { 015E } { 015F }
+        { 0160 } { 0161 }
+        { 0162 } { 0163 }
+        { 0164 } { 0165 }
+        { 0168 } { 0169 }
+        { 016A } { 016B }
+        { 016C } { 016D }
+        { 016E } { 016F }
+        { 0170 } { 0171 }
+        { 0172 } { 0173 }
+        { 0174 } { 0175 }
+        { 0176 } { 0177 }
+        { 0178 } { 00FF }
+        { 0179 } { 017A }
+        { 017B } { 017C }
+        { 017D } { 017E }
+        { 01CD } { 01CE }
+        { 01CF } { 01D0 }
+        { 01D1 } { 01D2 }
+        { 01D3 } { 01D4 }
+        { 01E2 } { 01E3 }
+        { 01E6 } { 01E7 }
+        { 01E8 } { 01E9 }
+        { 01EA } { 01EB }
+        { 01F4 } { 01F5 }
+        { 0218 } { 0219 }
+        { 021A } { 021B }
+        \q_recursion_tail ?
+        \q_recursion_stop
+      \cs_set_protected:Npn \@@_tmp:w #1#2#3
+        {
+          \group_begin:
+            \cs_set_protected:Npn \@@_tmp:w ##1##2##3
+              {
+                \char_set_lccode:nn { `\. } {##2}
+                \char_set_lccode:nn { `\! } {##3}
+                \tex_lowercase:D
+                  {
+                    \tl_const:cn
+                      { c__unicode_ #3 _ \tl_to_str:n { . ! } _tl }
+                  }
+                    { #2 }
+              }
+            \tl_set:Nx \l_@@_internal_a_tl
+              { \__unicode_codepoint_to_UTFiix:n { "#1 } }
+            \exp_after:wN \@@_tmp:w \l_@@_internal_a_tl
+          \group_end:
+        }
+      \@@_tmp:w { 00DF } { SS } { upper }
+      \@@_tmp:w { 00DF } { Ss } { title }
+      \@@_tmp:w { 0131 } { I }  { upper }
+    \group_end:
+  }
+%    \end{macrocode}
+%
+% The (fixed) look-up mappings for letter-like control sequences.
+%    \begin{macrocode}
+\group_begin:
+  \cs_set_protected:Npn \@@_change_case_setup:NN #1#2
+    {
+      \quark_if_recursion_tail_stop:N #1
+      \tl_const:cn  { c_@@_change_case_lower_ \token_to_str:N #1 _tl } { #2 }
+      \tl_const:cn  { c_@@_change_case_upper_ \token_to_str:N #2 _tl } { #1 }
+      \@@_change_case_setup:NN
+    }
+  \@@_change_case_setup:NN
+  \AA \aa
+  \AE \ae
+  \DH \dh
+  \DJ \dj
+  \L  \l
+  \NG \ng
+  \O  \o
+  \OE \oe
+  \SS \ss
+  \TH \th
+  \q_recursion_tail ?
+  \q_recursion_stop
+  \tl_const:cn  { c_@@_change_case_upper_ \token_to_str:N \i _tl } { I }
+  \tl_const:cn  { c_@@_change_case_upper_ \token_to_str:N \j _tl } { J }
+\group_end:
+%    \end{macrocode}
+%
+% \begin{variable}{\l_tl_case_change_accents_tl}
+%   A list of accents to leave alone.
+%    \begin{macrocode}
+\tl_new:N \l_tl_case_change_accents_tl
+\tl_set:Nn \l_tl_case_change_accents_tl { \" \^ \' \` \. \c \u \~ \H \v }
 %    \end{macrocode}
 % \end{variable}
 %
@@ -3831,7 +4269,7 @@
   {
     \token_if_cs:NTF #1
       {
-        \@@_change_case_cs:N #1
+        \@@_change_case_cs_letterlike:Nn #1 { upper }
         \@@_mixed_case_loop:wn #2 \q_recursion_stop {#3}
       }
       {
