Fix mixed case changing with starting letter-like cs

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -3097,7 +3097,7 @@
 % \begin{macro}[aux, EXP]{\@@_change_case_char_UTFiix:nNNN}
 % \begin{macro}[aux, EXP]{\@@_change_case_char_UTFiix:nNNNN}
 % \begin{macro}[aux, EXP]{\@@_change_case_char_UTFiix:nn}
-% \begin{macro}[aux, EXP]{\@@_change_case_cs_letterlike:Nn}
+% \begin{macro}[aux, EXP]{\@@_change_case_cs_letterlike:Nnn}
 % \begin{macro}[aux, EXP]{\@@_change_case_cs_accents:NN}
 % \begin{macro}[aux, EXP]{\@@_change_case_cs:N}
 % \begin{macro}[aux, EXP]{\@@_change_case_cs:NN}
@@ -3276,7 +3276,7 @@
 \cs_new:Npn \@@_change_case_N_type:Nnnn #1#2#3#4
   {
     \token_if_cs:NTF #1
-      { \@@_change_case_cs_letterlike:Nn #1 {#3} }
+      { \@@_change_case_cs_letterlike:Nnn #1 {#3} { } }
       { \@@_change_case_char:Nnn #1 {#3} {#4} }
     \@@_change_case_loop:wnn #2 \q_recursion_stop {#3} {#4}
   }
@@ -3376,14 +3376,16 @@
 %   ones to deal with. Letter-like control sequences are a simple look-up,
 %   while for accents the loop is much as done elsewhere. Notice that
 %   we have a no-op test to make sure there is no unexpected expansion of
-%   letter-like input.
+%   letter-like input. The third argument here is needed for mixed casing,
+%   where it if there is a hit there has to be a change-of-path.
 %    \begin{macrocode}
-\cs_new:Npn \@@_change_case_cs_letterlike:Nn #1#2
+\cs_new:Npn \@@_change_case_cs_letterlike:Nnn #1#2#3
   {
     \cs_if_exist:cTF { c_@@_change_case_ #2 _ \token_to_str:N #1 _tl }
       {
         \@@_change_case_output:vwn
           { c_@@_change_case_ #2 _ \token_to_str:N #1 _tl } 
+        #3
       }
       {
         \cs_if_exist:cTF
@@ -3392,7 +3394,10 @@
             \str_if_eq:nnTF {#2} { lower } { upper } { lower }
             _ \token_to_str:N #1 _tl 
           }
-          { \@@_change_case_output:nwn {#1} }
+          {
+            \@@_change_case_output:nwn {#1}
+            #3
+          }
           {
             \exp_after:wN \@@_change_case_cs_accents:NN
               \exp_after:wN #1 \l_tl_case_change_accents_tl
@@ -4174,6 +4179,7 @@
 % \begin{macro}[aux, EXP]{\@@_mixed_case_N_type:Nwn}
 % \begin{macro}[aux, EXP]{\@@_mixed_case_N_type:NNNnn}
 % \begin{macro}[aux, EXP]{\@@_mixed_case_N_type:Nnn}
+% \begin{macro}[aux, EXP]{\@@_mixed_case_letterlike:Nw}
 % \begin{macro}[aux, EXP]{\@@_mixed_case_char:N}
 % \begin{macro}[aux, EXP]{\@@_mixed_case_skip:N}
 % \begin{macro}[aux, EXP]{\@@_mixed_case_skip:NN}
@@ -4265,12 +4271,15 @@
 %    \end{macrocode}
 %   The business end of the loop is here: there is first a need to deal
 %   with any control sequence cases before looking for characters to skip.
+%   If there is a hit for a letter-like control sequence, switch to lower
+%   casing.
 %    \begin{macrocode}
 \cs_new:Npn \@@_mixed_case_N_type:Nnn #1#2#3
   {
     \token_if_cs:NTF #1
       {
-        \@@_change_case_cs_letterlike:Nn #1 { upper }
+        \@@_change_case_cs_letterlike:Nnn #1 { upper }
+          { \@@_mixed_case_letterlike:Nw }
         \@@_mixed_case_loop:wn #2 \q_recursion_stop {#3}
       }
       {
@@ -4278,6 +4287,8 @@
         \@@_change_case_loop:wnn #2 \q_recursion_stop { lower } {#3}
       }
   }
+\cs_new:Npn \@@_mixed_case_letterlike:Nw #1#2 \q_recursion_stop
+  { \@@_change_case_loop:wnn #2 \q_recursion_stop { lower } }
 %    \end{macrocode}
 %   As detailed above, handling a mixed case char means first looking for
 %   exceptions then treating as an upper cased letter, but with a list of
@@ -4327,6 +4338,7 @@
       { \@@_change_case_char:nN { upper } #1 }
   }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
