No case changing with pTeX and upper-half of 8-bit range
This is all entirely unreliable with pTeX. Entirely skip the
upper half to the range. More work may yet be needed to ensure
something vaguely sensible happens for the 7-bit range.

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -3980,7 +3980,10 @@
   \char_set_catcode_active:N !
   \char_set_catcode_active:N ;
   \char_set_catcode_active:N ,
-  \cs_if_exist:NF \utex_char:D
+  \bool_if:nT
+    {
+      \sys_if_engine_pdftex_p: || \sys_if_engine_uptex_p:
+    }
     {
       \cs_set_protected:Npn \@@_loop:nn #1#2
         {
