Typos [ci skip]

--- a/l3kernel/l3bootstrap.dtx
+++ b/l3kernel/l3bootstrap.dtx
@@ -513,10 +513,10 @@
 % anywhere, other engines have to build them into the format and so we
 % \emph{must} do this set up before reading the patterns. For the Unicode
 % engines, there are shared loaders available to obtain the relevant
-% information irectly from the Unicode Consortium data files. These need
-% standard (Ini)\TeX{} category codes and primitive availablity and must
+% information directly from the Unicode Consortium data files. These need
+% standard (Ini)\TeX{} category codes and primitive availability and must
 % therefore loaded \emph{very} early. This has a knock-on effect on the
-% $8$-bit set up: it makes sense to do the defintions for those here as
+% $8$-bit set up: it makes sense to do the definitions for those here as
 % well so it is all in one place.
 %
 % For \XeTeX{} and \LuaTeX{}, which are natively Unicode engines, simply
