Clarify a comment [ci skip]

--- a/l3kernel/l3bootstrap.dtx
+++ b/l3kernel/l3bootstrap.dtx
@@ -527,7 +527,7 @@
   \input load-unicode-data %
 \else
 %    \end{macrocode}
-% For the $8$-bit engines an encoding scheme must be chosen. At present,
+% For the $8$-bit engines a font encoding scheme must be chosen. At present,
 % this is the EC (|T1|) scheme, with the assumption that languages for which
 % this is not appropriate will be used with one of the Unicode engines.
 %    \begin{macrocode}
