--- a/l3kernel/l3final.dtx
+++ b/l3kernel/l3final.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3final.dtx Copyright (C) 1990-2015 The LaTeX3 Project
+%% File: l3final.dtx Copyright (C) 1990-2016 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -265,7 +265,7 @@
 %   need a font. At present, select Latin Modern Roman at 10\,pt:
 %   entirely arbitrary but at least usable.
 %    \begin{macrocode}
-\tex_everypar:D \exp_after:wN
+\tex_everyjob:D \exp_after:wN
   {
     \exp_after:wN \tex_font:D \cs:w T1/lmr/m/n/10 \cs_end:
       = ec-lmr10 \scan_stop:
