Add a simple font loader for LuaTeX in format mode
This allows us to load OpenType fonts 'out of the box', at least
if they are in the texmf tree. There's no font shaping here so its
only meant for European glyphs and even then limited. However, for
testing this should be handy.

Note that the code itself here is taken from Speeddata Publisher
with permission (see notes in .dtx). We can re-license but at
present I've gone with loading rather than copying so things are
clear. We are unlikely to use such a simple loader long-term in any
case. (The file fonts.lua from Speeddata Publisher shows how to do
basic shaping as needed for European support.)

Probably the next thing to do is deal with TeX ligatures and the
like, which will need a bit of work. That's all quite doable, as is
I think handling system fonts if we want to.

The big picture idea here is that we can now test Unicode stuff,
including hyphenation, in IniTeX mode.

Note that the format-building process is still a bit 'rough': you
need to put l3format.lua and fontloader.lua where LuaTeX can find
them.

--- a/l3kernel/l3final.dtx
+++ b/l3kernel/l3final.dtx
@@ -260,16 +260,41 @@
 %
 % \subsection{Temporary hacks}
 %
-% \begin{macro}{\T1/lmr/m/n/10}
+% \begin{macro}{\T1/lmr/m/n/10, \TU/lmr/m/n/10}
 %   For \emph{testing only} provide some kind of output: for that we
 %   need a font. At present, select Latin Modern Roman at 10\,pt:
 %   entirely arbitrary but at least usable.
 %    \begin{macrocode}
-\tex_everyjob:D \exp_after:wN
+\sys_if_engine_luatex:T
   {
-    \exp_after:wN \tex_font:D \cs:w T1/lmr/m/n/10 \cs_end:
-      = ec-lmr10 \scan_stop:
-    \use:c { T1/lmr/m/n/10 }
+    \tex_everyjob:D \exp_after:wN
+      {
+        \tex_the:D \tex_everyjob:D
+        \lua_now_x:n { require("l3format.lua") }
+      }
+  }
+\bool_if:nTF
+  {
+    \sys_if_engine_luatex_p: ||
+    \sys_if_engine_xetex_p:
+  }
+  {
+    \tex_everyjob:D \exp_after:wN \exp_after:wN \exp_after:wN
+      {
+        \exp_after:wN \tex_the:D \exp_after:wN \tex_everyjob:D
+        \exp_after:wN \tex_font:D \cs:w TU/lmr/m/n/10 \cs_end:
+          = "[lmroman10-regular.otf]"~at~10pt \scan_stop:
+        \use:c { TU/lmr/m/n/10 }
+      }
+  }
+  {
+    \tex_everyjob:D \exp_after:wN \exp_after:wN \exp_after:wN
+      {
+        \exp_after:wN \tex_the:D \exp_after:wN \tex_everyjob:D
+        \exp_after:wN \tex_font:D \cs:w T1/lmr/m/n/10 \cs_end:
+          = ec-lmr10 \scan_stop:
+        \use:c { T1/lmr/m/n/10 }
+      }
   }
 %    \end{macrocode}
 % \end{macro}
