--- a/l3kernel/l3final.dtx
+++ b/l3kernel/l3final.dtx
@@ -279,18 +279,18 @@
     \sys_if_engine_xetex_p:
   }
   {
-    \tex_everyjob:D \exp_after:wN \exp_after:wN \exp_after:wN
+    \tex_everyjob:D \exp_after:wN
       {
-        \exp_after:wN \tex_the:D \exp_after:wN \tex_everyjob:D
+        \tex_the:D \exp_after:wN \tex_everyjob:D
         \exp_after:wN \tex_font:D \cs:w TU/lmr/m/n/10 \cs_end:
           = "[lmroman10-regular.otf]"~at~10pt \scan_stop:
         \use:c { TU/lmr/m/n/10 }
       }
   }
   {
-    \tex_everyjob:D \exp_after:wN \exp_after:wN \exp_after:wN
+    \tex_everyjob:D \exp_after:wN
       {
-        \exp_after:wN \tex_the:D \exp_after:wN \tex_everyjob:D
+        \tex_the:D \exp_after:wN \tex_everyjob:D
         \exp_after:wN \tex_font:D \cs:w T1/lmr/m/n/10 \cs_end:
           = ec-lmr10 \scan_stop:
         \use:c { T1/lmr/m/n/10 }
