--- a/l3kernel/l3final.dtx
+++ b/l3kernel/l3final.dtx
@@ -273,27 +273,26 @@
         \lua_now_x:n { require("l3format.lua") }
       }
   }
-\bool_if:nTF
+\use:x
   {
-    \sys_if_engine_luatex_p: ||
-    \sys_if_engine_xetex_p:
-  }
-  {
-    \tex_everyjob:D \exp_after:wN
+    \tex_everyjob:D
       {
-        \tex_the:D \exp_after:wN \tex_everyjob:D
-        \exp_after:wN \tex_font:D \cs:w TU/lmr/m/n/10 \cs_end:
-          = "[lmroman10-regular.otf]"~at~10pt \scan_stop:
-        \use:c { TU/lmr/m/n/10 }
-      }
-  }
-  {
-    \tex_everyjob:D \exp_after:wN
-      {
-        \tex_the:D \exp_after:wN \tex_everyjob:D
-        \exp_after:wN \tex_font:D \cs:w T1/lmr/m/n/10 \cs_end:
-          = ec-lmr10 \scan_stop:
-        \use:c { T1/lmr/m/n/10 }
+        \tex_the:D \tex_everyjob:D
+        \bool_if:nTF
+          {
+             \sys_if_engine_luatex_p: ||
+             \sys_if_engine_xetex_p:
+          }
+          {
+            \tex_font:D \exp_not:c { TU/lmr/m/n/10 }
+              = "[lmroman10-regular.otf]"~at~10pt \scan_stop:
+            \exp_not:c { TU/lmr/m/n/10 }
+          }
+          {
+            \tex_font:D \exp_not:c { T1/lmr/m/n/10 }
+              = ec-lmr10~at~10pt \scan_stop:
+            \exp_not:c { T1/lmr/m/n/10 }
+          }
       }
   }
 %    \end{macrocode}
