Extend Lua \font callback parser
This should now be able to at least not choke with a range of XeTeX
syntax and also pass properties through as part of the 'properties
table'. Exactly whether this works or not is still not entirely clear!

--- a/l3kernel/l3luatex.dtx
+++ b/l3kernel/l3luatex.dtx
@@ -350,10 +350,30 @@ local fontloader = require("fontloader.lua")
 %    \begin{macrocode}
 callback.register("define_font", 
   function (name, size, id)
+    local opts, opttab, otfeatures = "", { }, { }
     if string.match(name, "^%[") then
-      name = string.match(name, "^%[([^%]]*)%]")
+      name, opts = string.match(name, "^%[([^%]]*)%][^:]*:?(.*)")
     end
-    return select(2, fontloader.define_font(name, size))
+    if opts ~= "" then
+      for _,kv in ipairs(string.explode(opts,";")) do
+        if string.match(kv, "=") then
+          local k, v = string.match(kv, "([^=]*)=?(.*)")
+          opttab[k] = v
+        else
+          if string.match(kv, "^+") then
+            otfeatures[string.sub(kv,2,-1)] = "true"
+          elseif string.match(kv, "^-") then
+            otfeatures[string.sub(kv,2,-1)] = "false"
+          else
+            otfeatures[kv] = "true"
+          end
+        end
+      end
+    end
+    if next(otfeatures) then
+      opttab["otfeatures"] = otfeatures
+    end
+    return select(2, fontloader.define_font(name, size, opttab))
   end
 )
 %    \end{macrocode}
