No real need to specify size here

--- a/l3kernel/l3final.dtx
+++ b/l3kernel/l3final.dtx
@@ -285,12 +285,12 @@
           }
           {
             \tex_font:D \exp_not:c { TU/lmr/m/n/10 }
-              = "[lmroman10-regular.otf]"~at~10pt \scan_stop:
+              = "[lmroman10-regular.otf]" \scan_stop:
             \exp_not:c { TU/lmr/m/n/10 }
           }
           {
             \tex_font:D \exp_not:c { T1/lmr/m/n/10 }
-              = ec-lmr10~at~10pt \scan_stop:
+              = ec-lmr10 \scan_stop:
             \exp_not:c { T1/lmr/m/n/10 }
           }
       }
