--- a/l3kernel/l3final.dtx
+++ b/l3kernel/l3final.dtx
@@ -288,14 +288,11 @@
               = "[lmroman10-regular.otf]/OT" \scan_stop:
             \exp_not:c { TU/lmr/m/n/10 }
             \tex_font:D \exp_not:c { TU/lmm/m/n/10 }
-              = "[latinmodern-math.otf]/OT:mode=base;script=math;"
-                \scan_stop:
+              = "[latinmodern-math.otf]/OT:mode=base;script=math;" \scan_stop:
             \tex_font:D \exp_not:c { TU/lmm/m/n/7 }
-              = "[latinmodern-math.otf]/OT:mode=base;script=math;+ssty=1"
-                ~at~7pt \scan_stop:
+              = "[latinmodern-math.otf]/OT:mode=base;script=math;+ssty=1;"~at~7pt \scan_stop:
             \tex_font:D \exp_not:c { TU/lmm/m/n/5 }
-              = "[latinmodern-math.otf]/OT:mode=base;script=math;+ssty=1"
-                ~at~5pt \scan_stop:
+              = "[latinmodern-math.otf]/OT:mode=base;script=math;+ssty=1;"~at~5pt \scan_stop:
             \exp_not:N \int_step_inline:nnnn { 0 } { 1 } { 3 }
               {
                 \tex_textfont:D         ##1 = \exp_not:c { TU/lmm/m/n/10 }
