--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -1573,7 +1573,7 @@
     \scan_stop:
 %</package>
 %    \end{macrocode}
-% Set up to read each file. As they use C-style comments, thre is a need to
+% Set up to read each file. As they use C-style comments, there is a need to
 % deal with |#|. At the same time, spaces are important so they need to be
 % picked up as they are important. Beyond that, the current category code
 % scheme works fine. With no I/O loop available, hard-code one that will work
