Fix catcode generation in \tl_lower_case:n, etc.
The \Uchar primitive generates catcode-12 tokens so is no
good here: we need \Ucharcat or equivalent.

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -3346,7 +3346,9 @@
         \int_compare:nNnTF { \use:c { @@_lookup_ #1 :N } #2 } = { 0 }
           { \exp_stop_f: #2 }
           {
-            \utex_char:D \use:c { @@_lookup_ #1 :N } #2
+            \char_generate:nn
+              { \use:c { @@_lookup_ #1 :N } #2 }
+              { \char_value_catcode:n { `#2 } }
           }
       }
     \cs_new_protected:Npn \@@_lookup_lower:N #1 { \tex_lccode:D `#1 }
