Produce normal catcodes from \fp_to_<type>:n
Need to look at \dim_use:N in this regard, but that is a
more risky change.

--- a/l3kernel/l3fp.dtx
+++ b/l3kernel/l3fp.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3fp.dtx Copyright (C) 2011-2015 The LaTeX3 Project
+%% File: l3fp.dtx Copyright (C) 2011-2016 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -253,8 +253,7 @@
 %   exception.  This function is identical to \cs{fp_to_decimal:n}.
 % \end{function}
 %
-% \begin{function}[EXP, added = 2012-05-08, updated = 2012-07-08,
-%   tested = m3fp-convert003]
+% \begin{function}[EXP, added = 2012-05-08, updated = 2016-03-22]
 %   {\fp_to_decimal:N, \fp_to_decimal:c, \fp_to_decimal:n}
 %   \begin{syntax}
 %     \cs{fp_to_decimal:N} \meta{fp~var}
@@ -269,7 +268,7 @@
 %   exception.
 % \end{function}
 %
-% \begin{function}[EXP, updated = 2012-07-08, tested = m3fp-convert003]
+% \begin{function}[EXP, updated = 2016-03-22]
 %   {\fp_to_dim:N, \fp_to_dim:c, \fp_to_dim:n}
 %   \begin{syntax}
 %     \cs{fp_to_dim:N} \meta{fp~var}
@@ -278,14 +277,15 @@
 %   Evaluates the \meta{floating point expression} and expresses the
 %   result as a dimension (in~\texttt{pt}) suitable for use in dimension
 %   expressions.  The output is identical to \cs{fp_to_decimal:n}, with
-%   an additional trailing~\texttt{pt}.  In particular, the result may
+%   an additional trailing~\texttt{pt} (both letter tokens).
+%   In particular, the result may
 %   be outside the range $[- 2^{14} + 2^{-17}, 2^{14} - 2^{-17}]$ of
 %   valid \TeX{} dimensions, leading to overflow errors if used as a
 %   dimension.  The values $\pm\infty$ and~\nan{} trigger an
 %   \enquote{invalid operation} exception.
 % \end{function}
 %
-% \begin{function}[EXP, updated = 2012-07-08, tested = m3fp-convert003]
+% \begin{function}[EXP, updated = 2012-07-08]
 %   {\fp_to_int:N, \fp_to_int:c, \fp_to_int:n}
 %   \begin{syntax}
 %     \cs{fp_to_int:N} \meta{fp~var}
@@ -300,8 +300,7 @@
 %   an \enquote{invalid operation} exception.
 % \end{function}
 %
-% \begin{function}[EXP, added = 2012-05-08, updated = 2012-07-08,
-%   tested = m3fp-convert003]
+% \begin{function}[EXP, added = 2012-05-08, updated = 2016-03-22]
 %   {\fp_to_scientific:N, \fp_to_scientific:c, \fp_to_scientific:n}
 %   \begin{syntax}
 %     \cs{fp_to_scientific:N} \meta{fp~var}
@@ -314,11 +313,11 @@
 %   \end{quote}
 %   The leading \meta{digit} is non-zero except in the case of $\pm 0$.
 %   The values $\pm\infty$ and~\nan{} trigger an \enquote{invalid
-%   operation} exception. The entire representation is in the form of
-%   a string (tokens of category code~$12$), \emph{including} the |e|.
+%   operation} exception. Normal category codes apply: thus the |e| is
+%   category code~$11 (a letter).
 % \end{function}
 %
-% \begin{function}[EXP, updated = 2012-07-08, tested = m3fp-convert003]
+% \begin{function}[EXP, updated = 2016-03-22]
 %   {\fp_to_tl:N, \fp_to_tl:c, \fp_to_tl:n}
 %   \begin{syntax}
 %     \cs{fp_to_tl:N} \meta{fp~var}
@@ -335,10 +334,11 @@
 %   \cs{fp_to_decimal:n}.  Negative numbers start with~|-|.  The
 %   special values $\pm 0$, $\pm\infty$ and~\nan{} are rendered as
 %   |0|, |-0|, \texttt{inf}, \texttt{-inf}, and~\texttt{nan}
-%   respectively.
+%   respectively. Normal category codes apply and thus \texttt{inf} or
+%   \texttt{nan}, if produced, will be made up of letters.
 % \end{function}
 %
-% \begin{function}[EXP, updated = 2012-07-08, tested = m3fp-convert003]
+% \begin{function}[EXP, updated = 2012-07-08]
 %   {\fp_use:N, \fp_use:c}
 %   \begin{syntax}
 %     \cs{fp_use:N} \meta{fp~var}
