Avoid \dim_use:N \box_...
This is probably wrong, so shopuld be done differently!
Various other places may also want adjustment.

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2012,14 +2012,14 @@
 \cs_new_protected:Npn \@@_set_bounding:N #1
   {
     \prop_put:Nnx \l_@@_bounding_prop { tl }
-      { { 0 pt } { \dim_use:N \box_ht:N #1 } }
+      { { 0 pt } { \dim_eval:n { \box_ht:N #1 } } }
     \prop_put:Nnx \l_@@_bounding_prop { tr }
-      { { \dim_use:N \box_wd:N #1 } { \dim_use:N \box_ht:N #1 } }
-    \dim_set:Nn \l_@@_internal_dim { - \box_dp:N #1 }
+      { { \dim_eval:n { \box_wd:N #1 } } { \dim_eval:n { \box_ht:N #1 } } }
+    \dim_set:Nn \l_@@_internal_dim { -\box_dp:N #1 }
     \prop_put:Nnx \l_@@_bounding_prop { bl }
       { { 0 pt } { \dim_use:N \l_@@_internal_dim } }
     \prop_put:Nnx \l_@@_bounding_prop { br }
-      { { \dim_use:N \box_wd:N #1 } { \dim_use:N \l_@@_internal_dim } }
+      { { \dim_eval:n { \box_wd:N #1 } } { \dim_use:N \l_@@_internal_dim } }
   }
 %    \end{macrocode}
 % \end{macro}
