Use \__int_value:w \__int_eval:w
This avoids 'abuse' of \int_use:N for what is not an N-type
argument.

--- a/l3kernel/l3fp-convert.dtx
+++ b/l3kernel/l3fp-convert.dtx
@@ -175,7 +175,7 @@
     \else:
       \exp_after:wN \@@_to_scientific_normal:wNw
       \exp_after:wN e
-      \int_use:N \__int_eval:w #2 - \c_one
+      \__int_value:w \__int_eval:w #2 - \c_one
     \fi:
     ; #3 #4 #5 #6 ;
   }
@@ -425,7 +425,7 @@
       \@@_case_return:nw { \exp_after:wN \c_zero_fp }
     \else:
       \exp_after:wN \@@_from_dim:wNw
-      \int_use:N \__int_eval:w #1 - \c_four
+      \__int_value:w \__int_eval:w #1 - \c_four
         \if_meaning:w - #2
           \exp_after:wN , \exp_after:wN 2 \__int_value:w
         \else:
