--- a/l3kernel/l3fp-trig.dtx
+++ b/l3kernel/l3fp-trig.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3fp-trig.dtx Copyright (C) 2011-2014 The LaTeX3 Project
+%% File: l3fp-trig.dtx Copyright (C) 2011-2014,2016 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -318,7 +318,7 @@
     \exp_after:wN #2
     \exp_after:wN #3
     \exp_after:wN #4
-    \int_use:N \__int_eval:w #5
+    \__int_value:w \__int_eval:w #5
       \exp_after:wN \exp_after:wN \exp_after:wN \exp_after:wN
       \if_int_compare:w #7 > #1 \c_zero \c_one
         #1 \@@_trig_large:ww \@@_trigd_large:ww
@@ -410,7 +410,7 @@
 \cs_new:Npn \@@_trigd_large_auxi:nnnnwNNNN #1#2#3#4#5; #6#7#8#9
   {
     \exp_after:wN \@@_trigd_large_auxii:wNw
-    \int_use:N \__int_eval:w #1 + #2
+    \__int_value:w \__int_eval:w #1 + #2
       - (#1 + #2 - \c_four) / \c_nine * \c_nine \__int_eval_end:
     #3;
     #4; #5{#6#7#8#9};
@@ -419,7 +419,7 @@
   {
     + (#1#2 - \c_four) / \c_nine * \c_two
     \exp_after:wN \@@_trigd_large_auxiii:www
-    \int_use:N \__int_eval:w #1#2
+    \__int_value:w \__int_eval:w #1#2
       - (#1#2 - \c_four) / \c_nine * \c_nine \__int_eval_end: #3 ;
   }
 \cs_new:Npn \@@_trigd_large_auxiii:www #1; #2; #3!
@@ -665,8 +665,8 @@
 \cs_new:Npn \@@_trig_large:ww #1, #2#3#4#5#6;
   {
     \exp_after:wN \@@_trig_large_auxi:wwwwww
-    \int_use:N \__int_eval:w (#1 - 32) / 64 \exp_after:wN ,
-    \int_use:N \__int_eval:w (#1 - 4) / 8 \exp_after:wN ,
+    \__int_value:w \__int_eval:w (#1 - 32) / 64 \exp_after:wN ,
+    \__int_value:w \__int_eval:w (#1 - 4) / 8 \exp_after:wN ,
     \__int_value:w #1 \@@_trig_inverse_two_pi: ;
     {#2}{#3}{#4}{#5} ;
   }
@@ -716,7 +716,7 @@
   {
     \exp_after:wN \@@_use_i_until_s:nw
     \exp_after:wN \@@_trig_large_auxvii:w
-    \int_use:N \__int_eval:w \c_@@_leading_shift_int
+    \__int_value:w \__int_eval:w \c_@@_leading_shift_int
       \prg_replicate:nn { \c_thirteen }
         { \@@_trig_large_auxvi:wnnnnnnnn }
       + \c_@@_trailing_shift_int - \c_@@_middle_shift_int
@@ -726,7 +726,7 @@
 \cs_new:Npn \@@_trig_large_auxvi:wnnnnnnnn #1; #2#3#4#5#6#7#8#9
   {
     \exp_after:wN \@@_trig_large_pack:NNNNNw
-    \int_use:N \__int_eval:w \c_@@_middle_shift_int
+    \__int_value:w \__int_eval:w \c_@@_middle_shift_int
       + #2*#9 + #3*#8 + #4*#7 + #5*#6
       #1; {#2}{#3}{#4}{#5} {#7}{#8}{#9}
   }
@@ -764,7 +764,7 @@
 \cs_new:Npn \@@_trig_large_auxvii:w #1#2#3
   {
     \exp_after:wN \@@_trig_large_auxviii:ww
-    \int_use:N \__int_eval:w (#1#2#3 - 62) / 125 ;
+    \__int_value:w \__int_eval:w (#1#2#3 - 62) / 125 ;
     #1#2#3
   }
 \cs_new:Npn \@@_trig_large_auxviii:ww #1;
@@ -782,7 +782,7 @@
   {
     \exp_after:wN \@@_use_i_until_s:nw
     \exp_after:wN \@@_trig_large_auxxi:w
-    \int_use:N \__int_eval:w \c_@@_leading_shift_int
+    \__int_value:w \__int_eval:w \c_@@_leading_shift_int
       \prg_replicate:nn { \c_thirteen }
         { \@@_trig_large_auxx:wNNNNN }
       + \c_@@_trailing_shift_int - \c_@@_middle_shift_int
@@ -791,14 +791,14 @@
 \cs_new:Npn \@@_trig_large_auxx:wNNNNN #1; #2 #3#4#5#6
   {
     \exp_after:wN \@@_trig_large_pack:NNNNNw
-    \int_use:N \__int_eval:w \c_@@_middle_shift_int
+    \__int_value:w \__int_eval:w \c_@@_middle_shift_int
       #2 \c_eight * #3#4#5#6
       #1; #2
   }
 \cs_new:Npn \@@_trig_large_auxxi:w #1;
   {
     \exp_after:wN \@@_ep_mul_raw:wwwwN
-    \int_use:N \__int_eval:w \c_zero \@@_ep_to_ep_loop:N #1 ; ; !
+    \__int_value:w \__int_eval:w \c_zero \@@_ep_to_ep_loop:N #1 ; ; !
     0,{7853}{9816}{3397}{4483}{0961}{5661};
     \@@_trig_small:ww
   }
@@ -889,7 +889,7 @@
     {
       \exp_after:wN \@@_sanitize:Nw
       \exp_after:wN #2
-      \int_use:N \__int_eval:w #1
+      \__int_value:w \__int_eval:w #1
     }
     #2
   }
@@ -968,7 +968,7 @@
     {
       \exp_after:wN \@@_sanitize:Nw
       \exp_after:wN #1
-      \int_use:N \__int_eval:w \@@_ep_to_float:wwN
+      \__int_value:w \__int_eval:w \@@_ep_to_float:wwN
     }
     #1
   }
@@ -1134,7 +1134,7 @@
   {
     \exp_after:wN \@@_atan_combine_o:NwwwwwN
     \exp_after:wN #2
-    \int_use:N \__int_eval:w
+    \__int_value:w \__int_eval:w
       \if_meaning:w 2 #5 \c_seven - \fi: #3 \exp_after:wN ;
     \c_@@_one_fixed_tl ;
     {0000}{0000}{0000}{0000}{0000}{0000};
@@ -1181,7 +1181,7 @@
   {
     \exp_after:wN \@@_atan_combine_o:NwwwwwN
     \exp_after:wN #1
-    \int_use:N \__int_eval:w
+    \__int_value:w \__int_eval:w
       \if_meaning:w 2 #4
         \c_seven - \__int_eval:w
       \fi:
@@ -1279,7 +1279,7 @@
     \@@_rrot:www \@@_fixed_mul_sub_back:wwwn #2; #3;
     {
       \exp_after:wN \@@_atan_Taylor_loop:www
-      \int_use:N \__int_eval:w #1 - \c_two ;
+      \__int_value:w \__int_eval:w #1 - \c_two ;
     }
     #3;
   }
@@ -1318,7 +1318,7 @@
   {
     \exp_after:wN \@@_sanitize:Nw
     \exp_after:wN #1
-    \int_use:N \__int_eval:w
+    \__int_value:w \__int_eval:w
       \if_meaning:w 0 #2
         \exp_after:wN \use_i:nn
       \else:
@@ -1329,7 +1329,7 @@
         \@@_fixed_mul:wwn #3; #4;
         {
           \exp_after:wN \@@_atan_combine_aux:ww
-          \int_use:N \__int_eval:w #2 / \c_two ; #2;
+          \__int_value:w \__int_eval:w #2 / \c_two ; #2;
         }
       }
       { #7 \@@_fixed_to_float:wN \@@_fixed_to_float_rad:wN }
