--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -1038,7 +1038,7 @@
 \cs_new:Npn \int_abs:n #1
   {
     \@@_value:w \exp_after:wN \@@_abs:N
-      \int_use:N \@@_eval:w #1 \@@_eval_end:
+      \@@_value:w \@@_eval:w #1 \@@_eval_end:
     \exp_stop_f:
   }
 \cs_new:Npn \@@_abs:N #1
@@ -1046,16 +1046,16 @@
 \cs_set:Npn \int_max:nn #1#2
   {
     \@@_value:w \exp_after:wN \@@_maxmin:wwN
-      \int_use:N \@@_eval:w #1 \exp_after:wN ;
-      \int_use:N \@@_eval:w #2 ;
+      \@@_value:w \@@_eval:w #1 \exp_after:wN ;
+      \@@_value:w \@@_eval:w #2 ;
       >
     \exp_stop_f:
   }
 \cs_set:Npn \int_min:nn #1#2
   {
     \@@_value:w \exp_after:wN \@@_maxmin:wwN
-      \int_use:N \@@_eval:w #1 \exp_after:wN ;
-      \int_use:N \@@_eval:w #2 ;
+      \@@_value:w \@@_eval:w #1 \exp_after:wN ;
+      \@@_value:w \@@_eval:w #2 ;
       <
     \exp_stop_f:
   }
@@ -1097,10 +1097,10 @@
 %    \begin{macrocode}
 \cs_new:Npn \int_div_truncate:nn #1#2
   {
-    \int_use:N \@@_eval:w
+    \@@_value:w \@@_eval:w
       \exp_after:wN \@@_div_truncate:NwNw
-      \int_use:N \@@_eval:w #1 \exp_after:wN ;
-      \int_use:N \@@_eval:w #2 ;
+      \@@_value:w \@@_eval:w #1 \exp_after:wN ;
+      \@@_value:w \@@_eval:w #2 ;
     \@@_eval_end:
   }
 \cs_new:Npn \@@_div_truncate:NwNw #1#2; #3#4;
@@ -1439,7 +1439,7 @@
 \prg_new_conditional:Npnn \int_compare:n #1 { p , T , F , TF }
   {
     \exp_after:wN \@@_compare:w
-    \int_use:N \@@_eval:w #1 \__prg_compare_error:
+    \@@_value:w \@@_eval:w #1 \__prg_compare_error:
   }
 \cs_new:Npn \@@_compare:w #1 \__prg_compare_error:
   {
@@ -1721,9 +1721,9 @@
 \cs_new:Npn \int_step_function:nnnN #1#2#3
   {
     \exp_after:wN \@@_step:wwwN
-    \int_use:N \@@_eval:w #1 \exp_after:wN ;
-    \int_use:N \@@_eval:w #2 \exp_after:wN ;
-    \int_use:N \@@_eval:w #3 ;
+    \@@_value:w \@@_eval:w #1 \exp_after:wN ;
+    \@@_value:w \@@_eval:w #2 \exp_after:wN ;
+    \@@_value:w \@@_eval:w #3 ;
   }
 \cs_new:Npn \@@_step:wwwN #1; #2; #3; #4
   {
