--- a/l3kernel/l3fp-round.dtx
+++ b/l3kernel/l3fp-round.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3fp-round.dtx Copyright(C) 2011-2012,2014,2015 The LaTeX3 Project
+%% File: l3fp-round.dtx Copyright(C) 2011-2012,2014-2016 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -257,7 +257,7 @@
     \exp_after:wN \@@_round:NNN
     \exp_after:wN #1
     \exp_after:wN #2
-    \int_use:N \__int_eval:w
+    \__int_value:w \__int_eval:w
       \if_int_odd:w 0 \if_meaning:w 0 #3 1 \fi:
                       \if_meaning:w 5 #3 1 \fi:
                 \exp_stop_f:
@@ -462,11 +462,11 @@
 \cs_new:Npn \@@_round_normal:NnnwNNnn #1#2#3#4; #5#6
   {
     \exp_after:wN \@@_round_normal:NNwNnn
-    \int_use:N \__int_eval:w
+    \__int_value:w \__int_eval:w
       \if_int_compare:w #2 > \c_zero
         1 \__int_value:w #2
         \exp_after:wN \@@_round_pack:Nw
-        \int_use:N \__int_eval:w 1#3 +
+        \__int_value:w \__int_eval:w 1#3 +
       \else:
         \if_int_compare:w #3 > \c_zero
           1 \__int_value:w #3 +
@@ -505,7 +505,7 @@
     \else:
       \exp_after:wN \@@_round_special_aux:Nw
       \exp_after:wN #4
-      \int_use:N \__int_eval:w \c_one
+      \__int_value:w \__int_eval:w \c_one
         \if_meaning:w 1 #1 -#6 \else: +#5 \fi:
     \fi:
     ;
