More \int_use:N => \__int_value:w changes
There are dim/skip cases to think about still.

--- a/l3experimental/xgalley/l3galley.dtx
+++ b/l3experimental/xgalley/l3galley.dtx
@@ -1798,7 +1798,7 @@
     \@@_parshape_set_cutouts:
     \tl_set:Nx \l_@@_tmp_tl
       {
-        \int_use:N \tex_parshape:D
+        \__int_value:w \tex_parshape:D
         \int_step_function:nnnN \c_one \c_one \tex_parshape:D
  \tmp
       }
@@ -1806,8 +1806,8 @@
   }
   \def\tmp#1{%
             \c_space_tl
-            \int_use:N \etex_parshapeindent:D #1 \c_space_tl \c_space_tl
-            \int_use:N  \etex_parshapelength:D #1 \c_space_tl
+            \__int_value:w \etex_parshapeindent:D #1 \c_space_tl \c_space_tl
+            \__int_value:w  \etex_parshapelength:D #1 \c_space_tl
           }
 %    \end{macrocode}
 %   Setting the margins is simple. Either they are zero, using the full measure,
@@ -2408,7 +2408,7 @@
       }
   }
 \cs_new:Npn \@@_save_display_club_penalties:n #1
-  { \int_use:N \etex_clubpenalties:D \__int_eval:w #1 \__int_eval_end: , }
+  { \__int_value:w \etex_clubpenalties:D \__int_eval:w #1 \__int_eval_end: , }
 \cs_new_protected:Npn \galley_save_display_widow_penalties:N #1
   {
     \clist_set:Nx #1
@@ -2419,7 +2419,7 @@
       }
   }
 \cs_new:Npn \@@_save_display_widow_penalties:n #1
-  { \int_use:N \etex_displaywidowpenalties:D \__int_eval:w #1 \__int_eval_end: , }
+  { \__int_value:w \etex_displaywidowpenalties:D \__int_eval:w #1 \__int_eval_end: , }
 \cs_new_protected:Npn \galley_save_widow_penalties:N #1
   {
     \clist_set:Nx #1
@@ -2430,14 +2430,14 @@
       }
   }
 \cs_new:Npn \@@_save_widow_penalties:n #1
-  { \int_use:N \etex_widowpenalties:D \__int_eval:w #1 \__int_eval_end: , }
+  { \__int_value:w \etex_widowpenalties:D \__int_eval:w #1 \__int_eval_end: , }
 %    \end{macrocode}
 %   This one is not an array, but is stored in a primitive, so there is
 %   a simple conversion. The general interline penalty is always the
 %   last value in the primitive array.
 %    \begin{macrocode}
 \cs_new_protected_nopar:Npn \galley_interline_penalty:
-  { \int_use:N \etex_interlinepenalties:D \etex_interlinepenalties:D \c_zero }
+  { \__int_value:w \etex_interlinepenalties:D \etex_interlinepenalties:D \c_zero }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
