--- a/l3trial/l3tree/l3tree.dtx
+++ b/l3trial/l3tree/l3tree.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File l3tree.dtx (C) Copyright 2012 The LaTeX3 Project
+%% File l3tree.dtx (C) Copyright 2012,2016 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -340,7 +340,7 @@
     \fi:
     \exp_not:N \__seq_item:n { \__int_value:w \tex_dimen:D #1 }
     \exp_after:wN \tree_extract_loop:w
-      \int_use:N \__int_eval:w #1 - \c_one ;
+      \__int_value:w \__int_eval:w #1 - \c_one ;
   }
 %    \end{macrocode}
 % \end{macro}
